@@ -127,7 +127,9 @@
 <p>Check the file versions of your core files to make sure you have upgraded as suggested and every file is up-to-date. Details on the usage and interpretation of the versioncheck page can be found in the corresponding section of the documentation <a href="upgrading.htm#versioncheck">Upgrading &rarr; The version check tool</a></p>
 
 <a name="update_database"></a><h2>Update database<a href="#update_database" title="Link to this section"><img src="images/anchor.gif" width="15" height="9" border="0" alt="" /></a></h2>
-<p>Perform a database update when upgrading from older versions. It does not hurt to re-run this application, so if you are not certain if your database is up-to-date, run this script</p>
+<p>Perform a database update when upgrading from older versions. It does not hurt to re-run this application, so if you are not certain if your database is up-to-date, run this script.</p>
+<p>[<a href="upgrading.htm#updater">more</a>]</p>
+<a name="update_database_end"></a>
 
 <a name="export"></a><h2>Export<a href="#export" title="Link to this section"><img src="images/anchor.gif" width="15" height="9" border="0" alt="" /></a></h2>
 <p><a href="export.htm#export">Export albums</a> as HTML pages or plain images</p>
