@@ -138,6 +138,14 @@
           <li><a href="upgrading.htm#upgrade_14">Upgrading from cpg1.4.x to version cpg1.5.x</a></li>
         </ul>
       </li>
+      <li><a href="upgrading.htm#updater">The update script</a>
+      	<ul class="level3" id="versioncheck">
+      		<li><a href="upgrading.htm#updater_what_it_does">What it does</a></li>
+      		<li><a href="upgrading.htm#updater_purpose">Purpose</a></li>
+      		<li><a href="upgrading.htm#updater_authorization">Authorization check</a></li>
+      		<li><a href="upgrading.htm#updater_when">When must the updater be run?</a></li>
+      	</ul>
+      </li>
       <li><a href="upgrading.htm#versioncheck">The version check tool</a>
         <ul class="level3" id="versioncheck">
           <li><a href="upgrading.htm#versioncheck_description_start">What it does</a></li>
